2006-02-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duradjust-dialog.glade:
	* data/glade/tmgadjust-dialog.glade:
	* data/glade/tmgshift-dialog.glade:
	* lib/gaupol/gtk/dialogs/duradjust.py:
	* lib/gaupol/gtk/dialogs/tmgadjust.py:
	* lib/gaupol/gtk/dialogs/tmgshift.py:

	* data/glade/adjust-dialog.glade:
	* data/glade/duration-dialog.glade:
	* data/glade/shift-dialog.glade:
	* lib/gaupol/gtk/dialogs/adjust.py:
	* lib/gaupol/gtk/dialogs/duration.py:
	* lib/gaupol/gtk/dialogs/shift.py:

	  Renamed ones below to ones above.

2006-02-20  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	  Fixed radio button groups.

	* lib/gaupol/base/delegates/timing.py:
	  (TimingDelegate.adjust_durations): Return changed rows.

	* lib/gaupol/gtk/cellrend/text.py:
	  Cosmetic changes.

	* lib/gaupol/gtk/delegates/timing.py:
	  (TimingDelegate.on_adjust_durations_activated): Written.

	* lib/gaupol/gtk/dialogs/duration.py:
	  Completed.

	* lib/gaupol/gtk/util/config.py:
	  (duration_adjust): Added use_* variables and fine-tuned default
	  values.

2006-02-18  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/duration-dialog.glade:
	* lib/gaupol/gtk/dialogs/duration.py:
	  New files.

	* data/ui/menubar.xml:
	  Added adjust_timings menu item.

	* lib/gaupol/base/delegates/timing.py:
	  (TimingDelegate.adjust_durations): New method.

	* lib/gaupol/gtk/delegates/timing.py:
	  (DurationAdjustAction): New class.
	  (TimingDelegate.on_adjust_durations_activated): New method.

	* lib/gaupol/gtk/util/config.py:
	  (duration_adjust): New class.

2006-02-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gtk/dialogs/frconvert.py:
	  New file.

2006-02-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/frconvert-dialog.glade:
	  Changed convert_button's response to gtk.RESPONSE_OK.

	* data/glade/shift-dialog.glade:
	  Removed icon from shift_button.

	* data/ui/menubar.xml:
	  Added convert_framerate menu item.

	* gaupol:
	* trantool: