@@ -51,7 +51,7 @@ class TimingAdjustDialog(gobject.GObject):
 
         gobject.GObject.__init__(self)
 
-        glade_xml = gtklib.get_glade_xml('adjust-dialog.glade')
+        glade_xml = gtklib.get_glade_xml('tmgadjust-dialog.glade')
         get_widget = glade_xml.get_widget
 
         self._all_radio        = get_widget('all_radio_button')
