@@ -50,7 +50,7 @@ class TimingShiftDialog(gobject.GObject):
 
         gobject.GObject.__init__(self)
 
-        glade_xml = gtklib.get_glade_xml('shift-dialog.glade')
+        glade_xml = gtklib.get_glade_xml('tmgshift-dialog.glade')
         get_widget = glade_xml.get_widget
 
         self._all_radio         = get_widget('all_radio_button')
